fix layout problem

--- a/frontend/src/assets/sass/lbd/_misc.scss
+++ b/frontend/src/assets/sass/lbd/_misc.scss
@@ -1,7 +1,7 @@
 /*     General overwrite     */
 body,
 .wrapper{
-    min-height: 100vh;
+    min-height: 100%; //MARK
     position: relative;
     background-color: white;
 }
@@ -58,5 +58,5 @@ input:focus {
 .wrapper{
     position: relative;
     top: 0;
-    height: 100vh;
+    height: 100%;//MARK
 }
