--- a/frontend/src/assets/sass/light-bootstrap-dashboard.css
+++ b/frontend/src/assets/sass/light-bootstrap-dashboard.css
@@ -238,7 +238,7 @@ h1 .subtitle {
 /*     General overwrite     */
 body,
 .wrapper {
-  min-height: 100vh;
+  min-height: 100%;
   position: relative;
   background-color: white;
 }
@@ -313,7 +313,7 @@ input:focus {
 .wrapper {
   position: relative;
   top: 0;
-  height: 100vh;
+  height: 100%;
 }
 
 .sidebar {
